blocks extension: when using the "center_top" image alignment in text+image blocks, Internet Explorer 8 would sometimes retain the wrong size of previously loaded images, causing surrounding elements to overlap (bug spotted on the Orfe? Catal? website).

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -56,11 +56,10 @@
 }
 
 /* Center top */
-.TextBlockView.center_top .image_gallery {
-    text-align: center;
+.TextBlockView.center_top .image_gallery > ul {
+    text-align: center;    
 }
 
-.TextBlockView.center_top .image_gallery > ul {
+.TextBlockView.center_top .image_gallery > ul > li {
     display: inline-block;
 }
-
